Test de Velocidad de Matrices Modifique algunos warnings de unsigned int Los test de las imagenes chicas terminados

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# test que no hace falta subir porque los genero
+implementacion/tests/testVelocidad*
