--- a/implementacion/Makefile
+++ b/implementacion/Makefile
@@ -4,6 +4,7 @@ SOURCES=$(wildcard src/lib/*.cpp)
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=tp2
 TEST=test
+TESTVELOCIDAD=testvelocidad
 
 all: $(SOURCES) $(EXECUTABLE)
 
@@ -15,6 +16,9 @@ $(TEST): src/test.cpp $(OBJECTS)
 $(EXECUTABLE): src/main.cpp $(OBJECTS)
 	$(CC) $(CFLAGS) $(OBJECTS) src/main.cpp -o $@
 
+$(TESTVELOCIDAD): src/testVelocidad.cpp $(OBJECTS)
+	$(CC) $(CFLAGS) $(OBJECTS) src/testVelocidad.cpp -o $@
+
 %.o: %.cpp
 	$(CC) $(CFLAGS) -c $< -o $@
 
@@ -22,3 +26,4 @@ clean:
 	rm $(OBJECTS)
 	rm $(EXECUTABLE)
 	rm $(TEST)
+	rm $(TESTVELOCIDAD)
